bluec-tests/tests/invalid/types_bool/bool_and_schar_conflict.c
_Bool b = 1;

int main(void)
{
    // this conflicts with previous definition of 'b'
    extern signed char b;
    return b;
}